feature: 更改项目目录架构

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="<%= BASE_URL %>static/css/loading.css" />
-  <title>珠海市司法局综合业务</title>
+  <title><%= process.env.VUE_APP_TITLE  %></title>
 </head>
 <style>
   body {
