--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,14 @@
 </style>
 <body>
   <noscript>
-    对不起，你暂时无法查看系统源码，该系统源码由javue提供技术底层框架支持
+    <%= process.env.VUE_APP_SCRIPTDESCRIPTION %>
   </noscript>
   <div id="app">
     <div class="pre-loading">
-    <div class="loader"></div>
-    <h1 class="tipsName">智能载入系统中...</h1>
+      <div class="loader"></div>
+      <h1 class="tipsName">
+        <%= process.env.VUE_APP_LOADINGTEXT %>
+      </h1>
     </div>
   </div>
 </body>
